# cs140e-rust

./: README.md
0-blinky/phase3/: blinky.c
0-blinky/phase4/src/: lang_items.rs  lib.rs
1-shell/ferris-wheel/compile-pass/: const.rs  try.rs
1-shell/ferris-wheel/run-pass/: borrow-2.rs  builder.rs  expressions.rs  trait-impl.rs
1-shell/questions/: blinky-states  bootloader-timeout  drop-container  fake-states  restricted-reads  shell-lookback  small-kernels  write-fmt
1-shell/stack-vec/src/: lib.rs
1-shell/ttywrite/: Cargo.toml
1-shell/ttywrite/src/: main.rs
1-shell/volatile/questions/: enforcing  macros  pub-constructor  safety  traits  unique-volatile
1-shell/volatile/src/: lib.rs
1-shell/xmodem/: Cargo.toml
1-shell/xmodem/src/: lib.rs
2-fs/fat32/: Cargo.toml
2-fs/fat32/src/: lib.rs  mbr.rs
2-fs/fat32/src/traits/: dummy.rs  fs.rs
2-fs/fat32/src/vfat/: cache.rs  cluster.rs  dir.rs  ebpb.rs  entry.rs  error.rs  fat.rs  file.rs  metadata.rs  vfat.rs
2-fs/questions/: atag-cmdline  atag-mem  bin-about  bin-frag  enduser-unsafe  lfn-identity  ll-alloc  manual-lookup  max-clusters  max-file-size  mbr-magic
jtag/: ft4232h.cfg
os/bootloader/: Cargo.toml  Makefile
os/bootloader/.cargo/: config.toml
os/bootloader/src/: console.rs  lang_items.rs  main.rs
os/kernel/: Cargo.toml  Makefile  aarch64-unknown-none.json  build.rs  rust-toolchain.toml
os/kernel/.cargo/: config.toml
os/kernel/src/: console.rs  kmain.rs  lang_items.rs  main.rs  shell.rs
os/kernel/src/allocator/: bin.rs  bump.rs  mod.rs  pool.rs  tests.rs  util.rs
os/kernel/src/fs/: sd.rs
os/kernel/src/sdv3/: card.rs  command.rs  common.rs  host.rs  mod.rs  response.rs  timer.rs
os/kernel/src/sdv3/card/: reg.rs
os/kernel/src/sdv3/host/: reg.rs
os/pi/: Cargo.toml
os/pi/src/: gpio.rs  lib.rs  timer.rs  uart.rs
os/pi/src/atags/: atag.rs  mod.rs  raw.rs
os/std/src/: ascii.rs  error.rs  lib.rs  panic.rs  panicking.rs  path.rs  primitive_docs.rs
os/std/src/collections/: mod.rs
os/std/src/collections/hash/: map.rs  set.rs  table.rs
os/std/src/io/: cursor.rs  error.rs  mod.rs  util.rs
os/std/src/prelude/: v1.rs
os/std/src/sync/: mod.rs
os/std/src/sys/ros/: mod.rs
os/std/src/sys_common/: bytestring.rs
os/volatile/src/: traits.rs
