[package]
name = "bootloader"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
edition = "2021"

# FIXME: There is a sutble bug: use build-std + lto=true + opt-level=3 + global_asm!
# at the same time will cause some link errors `undefined symbol: core::panicking::panic_fmt`.
# But disable anyone of them will compile ok.
[profile.dev]
panic = "abort"
lto = false     # disable lto to avoid link error
debug = true

[profile.release]
panic = "abort"
lto = true

[dependencies]
pi = { path = "../pi", features = ["std"] }

# from assignment 1
xmodem = { path = "../../1-shell/xmodem/" }
