[package]
name = "kernel"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
edition = "2021"

# FIXME: There is a sutble bug: use build-std + lto=true + opt-level=3 + global_asm!
# at the same time will cause some link errors `undefined symbol: core::panicking::panic_fmt`.
# But disable anyone of them will compile ok.
[profile.dev]
panic = "abort"
lto = false     # disable lto to avoid link error
debug = true

[profile.release]
panic = "abort"
lto = true


[dependencies]
custom-std = { path = "../std", package = "std", optional = true } # Use customized std

pi = { path = "../pi", default-features = false }

# from assignment 1
stack-vec = { path = "../../1-shell/stack-vec/" }

fat32 = { path = "../../2-fs/fat32/", default-features = false } # from assignment 2

[features]
custom-std = ["dep:custom-std", "pi/custom-std", "fat32/custom-std"]
